k8s/ssok-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssok-ingress
  namespace: ssok
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: ssok-group
    alb.ingress.kubernetes.io/subnets: subnet-0477299d6297b7a52,subnet-05bce5c34c2186ef4
    # HTTPS 설정 시, 아래 참고
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:123456789012:certificate/abcde...

spec:
  rules:
    - host: ssok.kr
      http:
        paths:
          - path: /api/bank/transfer
            pathType: Prefix
            backend:
              service:
                name: ssok-bank-proxy
                port:
                  number: 8080
          - path: /api/bank
            pathType: Prefix
            backend:
              service:
                name: ssok-bank
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ssok-gateway-service
                port:
                  number: 80
          - path: /opensearch
            pathType: Prefix
            backend:
              service:
                name: opensearch-cluster-master
                port:
                  number: 9200
          - path: /dashboards
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prom-prometheus
                port:
                  number: 9090
          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prom-alertmanager
                port:
                  number: 9093
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-grafana
                port:
                  number: 80
